# animus

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: base.rs  kv.rs  lib.rs
rest/client/: Cargo.toml
rest/client/src/: lib.rs  query_builder.rs  reader.rs  smart_buffer.rs  upserter.rs  writer.rs
rest/client/tests/fixtures/: robots_full_page_1.csv  robots_full_page_2.csv  robots_half_page.csv
rest/common/: Cargo.toml
rest/common/src/: lib.rs
tck/: Cargo.toml
tck/src/: lib.rs
