[workspace]
resolver = "3"
members = ["api", "rest/client", "tck"]

[workspace.dependencies]

# Internal
api = {package = "animus-api", path = "api"}
tck = {package = "animus-tck", path = "tck"}

# External
tokio = { version = "1.52.3"}
tokio-util = { version = "0.7.18"}
console-subscriber = { version = "0.5.0"}
tracing = { version = "0.1.44"}
tracing-subscriber = { version = "0.3.23"}
futures = {version = "0.3.32"}
thiserror = {version = "2.0.18"}
reqwest = {version = "0.13.4"}
