[workspace]
resolver = "3"
members = ["api", "rest/client", "tck"]

[workspace.dependencies]
# Internal
api = { package = "animus-api", path = "api" }
tck = { package = "animus-tck", path = "tck" }

# External

console-subscriber = { version = "0.5.0" }
csv-async = { version = "1.3.1" }
futures = { version = "0.3.32" }
http = { version = "1.4.2" }
reqwest = { version = "0.13.4" }
serde = { version = "1.0.228" }
thiserror = { version = "2.0.18" }
tokio = { version = "1.52.3" }
tokio-util = { version = "0.7.18" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23" }
