[workspace]
resolver = "3"
members = ["api", "rest/client", "tck"]

[workspace.dependencies]
# Internal
api = { package = "animus-api", path = "api" }
tck = { package = "animus-tck", path = "tck" }

# External

bytes = "1.12.1"
console-subscriber = "0.5.0"
csv-async = "1.3.1"
futures = "0.3.32"
http = "1.4.2"
httpmock = "0.8.3"
reqwest = "0.13.4"
serde = "1.0.228"
thiserror = "2.0.18"
tokio = "1.52.3"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
