[package]
name = "animus-rest-client"
version = "0.1.0"
edition = "2024"

[dependencies]
api = {workspace = true}

futures = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true, features = ["net", "macros"]}
tokio-util = {workspace=true, features = ["rt"]}
reqwest = {workspace = true, features = ["query"]}

[dev-dependencies]
tck = {workspace = true}
