[package]
name = "animus-rest-client"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { workspace = true }

futures = { workspace = true }
reqwest = { workspace = true, features = ["query"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net"] }
tokio-util = { workspace = true, features = ["rt"] }

[dev-dependencies]
tck = { workspace = true }
